--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -34,6 +34,7 @@
       - python3-pip
       - git
       - rsync
+      - docker-compose
     state: present
   when: ansible_facts.os_family == "Debian"
 
@@ -48,12 +49,6 @@
       - rsync
     state: present
   when: ansible_facts.os_family == "Archlinux"
-
-- name: Install Docker Compose using Pip.
-  ansible.builtin.pip:
-    name: docker-compose
-    state: present
-    executable: pip3
 
 - name: "Ensure user is added to the docker group: {{ ansible_user }}"
   ansible.builtin.user:
